--- a/public/index.html
+++ b/public/index.html
@@ -538,7 +538,7 @@ Liam Attard
 body{  padding:0; margin:0;}
 .dot{margin: 0 auto}
 .cont{text-align:center;position: fixed ; width: 100%;top:8%;}
-.conttwo{text-align:center;position: fixed ; width: 100%;top:80%;}
+.conttwo{text-align:center;position: fixed ; width: 100%;top:85%;}
 .wave {
   animation: moveTheWave 90000ms linear infinite;
   stroke-dasharray: 0 0 0 0;
@@ -664,15 +664,13 @@ body{  padding:0; margin:0;}
 </div>
 </footer><script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
 <script>
-    if (localStorage.getItem("pref-theme") === "dark") {
-        document.body.classList.add('dark');
-    } else if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove('dark')
-    } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        document.body.classList.add('dark');
+    if (document.body.className.includes("dark")) {
+        document.body.classList.remove('dark');
+        localStorage.setItem("pref-theme", 'light');
     }
-
 </script>
+
+
 
 
 
