Updated 12th October

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@ Liam Attard
                 <div class="">
                     <div class="">
                         
-                        <a href="#" class="btn" download
+                        <a href="LiamAtt_Resume.pdf" class="btn" download
 			  >
                             View My Resume
                         </a>
