--- a/public/index.html
+++ b/public/index.html
@@ -216,14 +216,20 @@ Liam Attard
 </header>
 <div id="content"><style>
 
-body{  padding:0; margin:0;}
-.dot{margin: 0 auto}
-.cont{text-align:center;}
-.wave {
-  animation: moveTheWave 90000ms linear infinite;
-  stroke-dasharray: 0 0 0 0;
-  
+ 
+@media (min-width: 768px) {
+  .wave {
+    animation: moveTheWave 90000ms linear infinite;
+  }
 }
+
+ 
+@media (max-width: 767px) {
+  .wave {
+    animation: moveTheWave 30000ms linear infinite;
+  }
+}
+
  
 @keyframes moveTheWave {
  
@@ -324,14 +330,20 @@ body{  padding:0; margin:0;}
 </section>
 <style>
 
-body{  padding:0; margin:0;}
-.dot{margin: 0 auto}
-.cont{text-align:center;}
-.wave {
-  animation: moveTheWave 90000ms linear infinite;
-  stroke-dasharray: 0 0 0 0;
-  
+ 
+@media (min-width: 768px) {
+  .wave {
+    animation: moveTheWave 90000ms linear infinite;
+  }
 }
+
+ 
+@media (max-width: 767px) {
+  .wave {
+    animation: moveTheWave 30000ms linear infinite;
+  }
+}
+
  
 @keyframes moveTheWave {
  
